Fixed warning and missing javadoc